# llm-gateway

./: .gitignore  Dockerfile  ProduceNewAPI.txt  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  todo.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 3fd9b3a6f6c1_admin_audit_and_key_metadata.py  6b3457f1ab86_add_tenant_tier.py  7c9c3d5f1a2b_add_pricing_table.py  8f4b7a6b0d2a_add_rag_documents.py  9c2d6a0a3f2b_add_api_key_name.py  bb63e6ac5b76_init.py  c3a7a5d1b2d9_add_api_key_name.py
app/: main.py  mock_provider.py  ollama_provider.py  otel.py  pricing.py  provider.py  reliability.py  routing.py  schemas.py
app/db/: models.py  session.py
app/rag/: chunking.py  embeddings.py  ingest.py  rerank.py  retrieval.py
evals/: dataset.jsonl  run_eval.py
frontend/: admin.html  admin.js  app.js  chat.html  chat.js  index.html  keys.html  keys.js  package.json  shared.js  styles.css  tenants.html  tenants.js
frontend/src/: App.tsx  styles.css
grafana/dashboards/: llm-gateway.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
runbooks/: evals.md  ingestion.md  rag-debugging.md
tests/: test_auth.py  test_eval_scoring.py  test_health.py  test_mock_provider.py  test_pricing.py  test_rag_chunking.py  test_rag_rerank.py  test_rag_retrieval_integration.py  test_reliability.py  test_routing.py  test_schemas.py
