[project]
name = "llm-gateway"
version = "0.1.0"
description = ""
authors = [
    { name = "ThomasKaragiannopoulos", email = "ltcagglos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.13.2,<2.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.30,<3.0.0)",
    "redis (>=5.2.0,<6.0.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "pgvector (>=0.3.5,<0.4.0)",
    "opentelemetry-api (>=1.27.0,<2.0.0)",
    "opentelemetry-sdk (>=1.27.0,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.27.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.48b0,<0.49)",
    "opentelemetry-instrumentation-httpx (>=0.48b0,<0.49)",
    "setuptools (>=70.0.0,<80.0.0)",
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
